flux/apps/int/navidrome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/instance: navidrome
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
      app.kubernetes.io/instance: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
        app.kubernetes.io/instance: navidrome
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: navidrome
          image: "deluan/navidrome:0.63.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: navidrome-data
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: music-pvc
