flux/apps/int/navidrome/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/service: navidrome
    app.kubernetes.io/instance: navidrome
spec:
  type: ClusterIP
  ports:
    - port: 4533
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
